intel/bench_214_work/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_alias_opcode_with_main/log.txt
bench_214_work/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_alias_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_alias_opcode_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_alias_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_alias_opcode_with_main.c:196:21: error: cannot initialize return object of type 'const aarch64_opcode *' (aka 'const int *') with an rvalue of type 'void *'
    default: return NULL;
                    ^~~~
bench_214_work/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_alias_opcode_with_main/extr_.radare2librasmarcharmaarch64aarch64-dis-2.c_aarch64_find_next_alias_opcode_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
2 errors generated.
HLS FPGA Parse FAILED.
